library is added section home is ready(styles too)

--- a/html/index.html
+++ b/html/index.html
@@ -5,20 +5,37 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="../css/styles.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <nav class="navbar">
         <div class="max-width">
             <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
-            <il class="menu">
+            <ul class="menu">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Skills</a></li>
                 <li><a href="#">Teams</a></li>
                 <li><a href="#">Contact</a></li>
-            </il>
+            </ul>
+            <div class="menu-btn">
+                <i class="fas fa-bars"></i>
+            </div>
         </div>
     </nav>
+
+    <section class="home" id="home">
+        <div class="max-width">
+            <div class="home-content">
+                <div class="text-1">Hello my name is</div>
+                <div class="text-2">Gintaras Graciovas</div>
+                <div class="text-3">And i'm an <span>Anime Lover</span></div>
+                <a href="#">Hire me</a>
+            </div>
+        </div>
+    </section>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab ad aspernatur, autem consectetur cupiditate dignissimos distinctio dolore eos eum id, ipsam magnam nam obcaecati quasi rem rerum veniam. A consectetur culpa facilis nihil perferendis porro qui recusandae sed totam vitae! Amet cum ex magni, praesentium quaerat suscipit? Ad aspernatur assumenda atque blanditiis cum earum, error excepturi fuga nisi non, perferendis quae quaerat repellat saepe sunt totam voluptatem. Beatae dolor doloribus exercitationem minus mollitia, neque quas quo soluta. Accusantium ad, autem cum cumque deleniti dolores earum facere in inventore laborum mollitia nihil officiis, quae qui rem soluta tempora totam voluptatibus. Ad animi assumenda cum dolor esse est et, ex facere fugiat hic ipsam ipsum libero minus molestias officiis, optio sequi sunt tenetur totam ullam, veniam veritatis vitae voluptatibus! Accusantium at cum delectus, doloremque eaque earum eius, error incidunt modi mollitia nesciunt perferendis quidem. Ad aliquam aut corporis dolores dolorum earum est maiores necessitatibus, officiis porro quidem quos repellendus reprehenderit saepe suscipit temporibus unde. Culpa cumque, cupiditate debitis et illum iste natus quae quod voluptate voluptatem. Consequatur modi nobis quo? Ipsum laboriosam natus optio quam, repellendus rerum veritatis. Dolor error ex iure laudantium maiores necessitatibus, neque nesciunt nobis perspiciatis placeat sequi temporibus.</p>
+    <script src="../js/script.js"></script>
 </body>
 </html>
