section about is created || styles added

--- a/html/index.html
+++ b/html/index.html
@@ -25,6 +25,7 @@
         </div>
     </nav>
 
+    <!--home section-->
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
@@ -35,7 +36,24 @@
             </div>
         </div>
     </section>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab ad aspernatur, autem consectetur cupiditate dignissimos distinctio dolore eos eum id, ipsam magnam nam obcaecati quasi rem rerum veniam. A consectetur culpa facilis nihil perferendis porro qui recusandae sed totam vitae! Amet cum ex magni, praesentium quaerat suscipit? Ad aspernatur assumenda atque blanditiis cum earum, error excepturi fuga nisi non, perferendis quae quaerat repellat saepe sunt totam voluptatem. Beatae dolor doloribus exercitationem minus mollitia, neque quas quo soluta. Accusantium ad, autem cum cumque deleniti dolores earum facere in inventore laborum mollitia nihil officiis, quae qui rem soluta tempora totam voluptatibus. Ad animi assumenda cum dolor esse est et, ex facere fugiat hic ipsam ipsum libero minus molestias officiis, optio sequi sunt tenetur totam ullam, veniam veritatis vitae voluptatibus! Accusantium at cum delectus, doloremque eaque earum eius, error incidunt modi mollitia nesciunt perferendis quidem. Ad aliquam aut corporis dolores dolorum earum est maiores necessitatibus, officiis porro quidem quos repellendus reprehenderit saepe suscipit temporibus unde. Culpa cumque, cupiditate debitis et illum iste natus quae quod voluptate voluptatem. Consequatur modi nobis quo? Ipsum laboriosam natus optio quam, repellendus rerum veritatis. Dolor error ex iure laudantium maiores necessitatibus, neque nesciunt nobis perspiciatis placeat sequi temporibus.</p>
+
+    <!--about section-->
+    <section class="about" id="about">
+        <div class="max-width">
+            <h2 class="title">About me</h2>
+            <div class="about-content">
+                <div class="column left">
+                    <img src="../img/kill2.jpg" alt="">
+                </div>
+                <div class="column right">
+                    <div class="text">I'm Gintaras and I'm a <span>Front End Developer</span></div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae ducimus, earum eveniet illum minima nam nemo neque nisi placeat quasi repudiandae sit tenetur, veniam! Ad alias aliquam corporis cumque, delectus eum eveniet excepturi, explicabo harum id illo iure iusto labore maiores maxime modi molestias necessitatibus neque nihil non provident qui quisquam ratione rem saepe soluta unde ut vel, voluptas voluptate.</p>
+                    <a href="#">Download CV</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <script src="../js/script.js"></script>
 </body>
 </html>
