--- a/html/index.html
+++ b/html/index.html
@@ -86,6 +86,58 @@
         </div>
     </section>
 
+    <!--skills section-->
+    <section class="skills" id="skills">
+        <div class="max-width">
+            <h2 class="title">My skills</h2>
+            <div class="skills-content">
+                <div class="column left">
+                    <div class="text">My creative skills & experiences.</div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In molestias natus officia perferendis, possimus reprehenderit veniam! Amet at atque commodi, consequatur consequuntur cum eos esse exercitationem expedita minus modi mollitia officiis omnis, qui quibusdam quidem quisquam saepe tempora! Doloremque, optio, quas. Accusamus ad amet asperiores delectus dolores ducimus earum ex, ipsam iste laborum quam quibusdam reprehenderit similique suscipit voluptas. Similique!</p>
+                    <a href="#">Read more</a>
+                </div>
+                <div class="column right">
+                    <div class="bars">
+                        <div class="info">
+                            <span>HTML</span>
+                            <span>90%</span>
+                        </div>
+                        <div class="line html"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>CSS</span>
+                            <span>60%</span>
+                        </div>
+                        <div class="line css"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>JavaScript</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="line js"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>Angular</span>
+                            <span>30%</span>
+                        </div>
+                        <div class="line ng"></div>
+                    </div>
+                    <div class="bars">
+                        <div class="info">
+                            <span>React</span>
+                            <span>30%</span>
+                        </div>
+                        <div class="line react"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <script src="../js/script.js"></script>
 </body>
 </html>
