--- a/html/index.html
+++ b/html/index.html
@@ -10,18 +10,22 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.5/typed.min.js"></script>
 </head>
 <body>
+    <div class="scroll-up-btn">
+        <i class="fas fa-angle-up"></i>
+    </div>
     <nav class="navbar">
         <div class="max-width">
             <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
             <ul class="menu">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Teams</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#home" class="menu-btn">Home</a></li>
+                <li><a href="#about" class="menu-btn">About</a></li>
+                <li><a href="#services" class="menu-btn">Services</a></li>
+                <li><a href="#skills" class="menu-btn">Skills</a></li>
+                <li><a href="#teams" class="menu-btn">Teams</a></li>
+                <li><a href="#contact" class="menu-btn">Contact</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -35,7 +39,7 @@
             <div class="home-content">
                 <div class="text-1">Hello my name is</div>
                 <div class="text-2">Gintaras Graciovas</div>
-                <div class="text-3">And i'm an <span>Anime Lover</span></div>
+                <div class="text-3">And i'm an <span class="typing"></span></div>
                 <a href="#">Hire me</a>
             </div>
         </div>
@@ -50,7 +54,7 @@
                     <img src="../img/kill2.jpg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">I'm Gintaras and I'm a <span>Front End Developer</span></div>
+                    <div class="text">I'm Gintaras and I'm a <span class="typing-2"></span></div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae ducimus, earum eveniet illum minima nam nemo neque nisi placeat quasi repudiandae sit tenetur, veniam! Ad alias aliquam corporis cumque, delectus eum eveniet excepturi, explicabo harum id illo iure iusto labore maiores maxime modi molestias necessitatibus neque nihil non provident qui quisquam ratione rem saepe soluta unde ut vel, voluptas voluptate.</p>
                     <a href="#">Download CV</a>
                 </div>
@@ -184,6 +188,69 @@
             </div>
         </div>
     </section>
+
+    <!--contact section-->
+    <section class="contact" id="contact">
+        <div class="max-width">
+            <h2 class="title">Contact me</h2>
+            <div class="contact-content">
+                <div class="column left">
+                    <div class="text">Get in Touch</div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi minus, quam? Aliquid cum deleniti est iusto neque quos sunt, voluptatibus.</p>
+                    <div class="icons">
+                        <div class="row">
+                            <i class="fas fa-user"></i>
+                            <div class="info">
+                                <div class="head">Name</div>
+                                <div class="sub-title">Gintaras Graciovas</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fas fa-map-marker-alt"></i>
+                            <div class="info">
+                                <div class="head">Address</div>
+                                <div class="sub-title">Konoha, Japan</div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <i class="fas fa-envelope"></i>
+                            <div class="info">
+                                <div class="head">Email</div>
+                                <div class="sub-title">qwerty@gmail.com</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="column right">
+                    <div class="text">Message me</div>
+                    <form action="#">
+                        <div class="fields">
+                            <div class="field name">
+                                <input type="text" placeholder="Name" required>
+                            </div>
+                            <div class="field email">
+                                <input type="email" placeholder="Email" required>
+                            </div>
+                        </div>
+                        <div class="field">
+                            <input type="text" placeholder="Subject" required>
+                        </div>
+                        <div class="field textarea">
+                            <textarea cols="30" rows="10" placeholder="Describe project.." required></textarea>
+                        </div>
+                        <div class="button">
+                            <button type="submit">Send message</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--footer section-->
+    <footer>
+        <span>Created By <a href="https://instagram.com/_grachxvas_">_grachxvas_</a> | <span class="far fa-copyright"></span>2021 All rights reserved.</span>
+    </footer>
     <script src="../js/script.js"></script>
 </body>
 </html>
